--- a/5-logreg/Предобработка данных и логистическая регрессия.ipynb
+++ b/5-logreg/Предобработка данных и логистическая регрессия.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
        "(6000, 39)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
        "[5 rows x 39 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
        "(213, 39)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
        "0.8868126129894043"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +777,7 @@
        "0.8879930854506152"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1069,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1142,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1151,7 +1151,7 @@
        "0.8872147655574267"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1204,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1270,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1286,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1297,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1306,7 +1306,7 @@
        "((4200, 5606), (1800, 5606))"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1320,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1347,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1356,7 +1356,7 @@
        "0.8794109086023914"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1397,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1441,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1465,7 +1465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1504,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1532,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1551,7 +1551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1577,6 +1577,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8869888147517899"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_poly = clf_poly.predict_proba(X_test_poly)[:, 1]\n",
+    "roc_auc_poly = roc_auc_score(y_test_stratify, y_poly)\n",
+    "roc_auc_poly"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1596,7 +1618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1624,7 +1646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1633,7 +1655,7 @@
        "0.8794109086023914"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1646,20 +1668,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[43, 44, 63, 64, 109, 111, 125, 156, 205, 206, 209, 242, 254, 320, 322, 327, 331, 389, 390, 397, 399, 401, 409, 412, 427, 431, 445, 447, 458, 461, 463, 470, 479, 492, 500, 506, 509, 513, 514, 515, 519, 526, 528, 530, 537, 548, 561, 564, 572, 587, 589, 593, 596, 623, 627, 628, 629, 630, 635, 637, 640, 676, 677, 691, 701, 707, 713, 716, 721, 725, 734, 742, 752, 756, 766, 767, 771, 773, 774, 785, 790, 791, 795, 813, 816, 818, 829, 842, 850, 853, 888, 898, 906, 910, 914, 917, 925, 936, 937, 942, 955, 958, 962, 964, 969, 972, 975, 976, 996, 1000, 1006, 1008, 1009, 1010, 1015, 1023, 1028, 1036, 1037, 1041, 1044, 1049, 1054, 1056, 1062, 1070, 1078, 1092, 1103, 1120, 1136, 1138, 1139, 1141, 1145, 1155, 1164, 1174, 1191, 1192, 1194, 1195, 1196, 1200, 1203, 1204, 1213, 1222, 1223, 1232, 1238, 1241, 1244, 1246, 1254, 1255, 1264, 1274, 1290, 1293, 1294, 1295, 1306, 1311, 1312, 1316, 1319, 1335, 1336, 1354, 1357, 1358, 1359, 1360, 1363, 1374, 1375, 1380, 1389, 1392, 1393, 1401, 1402, 1405, 1407, 1409, 1411, 1416, 1417, 1421, 1422, 1425, 1427, 1440, 1444, 1446, 1447, 1453, 1459, 1460, 1467, 1481, 1485, 1494, 1497, 1516, 1522, 1528, 1535, 1555, 1556, 1560, 1567, 1569, 1572, 1583, 1588, 1590, 1592, 1593, 1595, 1597, 1604, 1614, 1616, 1617, 1618, 1620, 1625, 1630, 1635, 1645, 1646, 1652, 1655, 1661, 1705, 1706, 1716, 1717, 1733, 1739, 1741, 1742, 1750, 1757, 1766, 1767, 1769, 1771, 1772, 1777, 1778, 1790, 1792, 1794, 1795, 1797, 1818, 1832, 1833, 1842, 1846, 1847, 1850, 1856, 1857, 1860, 1861, 1867, 1869, 1872, 1873, 1874, 1878, 1883, 1886, 1898, 1907, 1910, 1918, 1923, 1934, 1938, 1940, 1945, 1948, 1955, 1961, 1968, 1970, 1974, 1975, 2005, 2011, 2015, 2024, 2031, 2035, 2041, 2070, 2075, 2081, 2082, 2085, 2094, 2097, 2104, 2109, 2120, 2121, 2129, 2133, 2140, 2143, 2145, 2146, 2160, 2162, 2164, 2168, 2171, 2174, 2179, 2189, 2193, 2203, 2209, 2211, 2214, 2217, 2219, 2221, 2241, 2243, 2248, 2254, 2257, 2261, 2266, 2277, 2280, 2285, 2291, 2293, 2297, 2303, 2305, 2319, 2323, 2332, 2335, 2340, 2345, 2355, 2380, 2385, 2420, 2441, 2445, 2449, 2461, 2464, 2473, 2474, 2535, 2572, 2577, 2599, 2606, 2625, 2638, 2655, 2681, 2684, 2685, 2719, 2758, 2772, 2783, 2819, 2823, 2824, 2839, 2840, 2841, 2842, 2847, 2863, 2872, 2878, 2879, 2900, 2914, 2924, 2939, 2940, 2946, 2956, 2978, 3001, 3008, 3009, 3043, 3045, 3046, 3053, 3066, 3068, 3088, 3097, 3123, 3130, 3135, 3157, 3158, 3160, 3164, 3166, 3171, 3173, 3174, 3180, 3184, 3186, 3194, 3221, 3228, 3234, 3244, 3250, 3262, 3274, 3298, 3309, 3335, 3345, 3361, 3367, 3368, 3382, 3385, 3393, 3396, 3408, 3439, 3441, 3459, 3462, 3470, 3471, 3483, 3488, 3499, 3522, 3534, 3537, 3566, 3568, 3574, 3584, 3596, 3608, 3611, 3616, 3625, 3632, 3636, 3641, 3652, 3666, 3672, 3682, 3683, 3706, 3708, 3711, 3716, 3727, 3730, 3731, 3732, 3733, 3736, 3740, 3747, 3748, 3751, 3756, 3763, 3770, 3771, 3777, 3781, 3786, 3808, 3809, 3813, 3815, 3819, 3826, 3830, 3834, 3848, 3852, 3865, 3876, 3880, 3906, 3909, 3910, 3929, 3938, 3941, 3944, 3958, 3967, 3970, 3974, 3977, 3992, 3995, 4001, 4015, 4020, 4022, 4032, 4044, 4055, 4057, 4060, 4063, 4066, 4068, 4072, 4087, 4091, 4098, 4103, 4105, 4110, 4112, 4116, 4117, 4118, 4119, 4122, 4129, 4134, 4137, 4151, 4158, 4159, 4160, 4167, 4173, 4176, 4179, 4182, 4186, 4187, 4195, 4201, 4203, 4207, 4218, 4223, 4228, 4229, 4237, 4239, 4259, 4264, 4265, 4267, 4270, 4272, 4274, 4280, 4284, 4288, 4290, 4307, 4311, 4333, 4339, 4349, 4354, 4374, 4379, 4387, 4393, 4397, 4398, 4399, 4457, 4465, 4476, 4493, 4502, 4514, 4525, 4533, 4537, 4540, 4565, 4566, 4568, 4580, 4583, 4605, 4613, 4624, 4625, 4627, 4628, 4632, 4640, 4645, 4648, 4656, 4658, 4663, 4677, 4680, 4705, 4713, 4715, 4717, 4722, 4724, 4735, 4736, 4738, 4739, 4742, 4749, 4750, 4754, 4795, 4852, 4880, 4882, 4890, 4896, 4899, 4917, 4927, 4931, 4952, 4953, 4960, 4966, 4969, 4988, 4989, 4995, 4997, 4998, 5006, 5014, 5016, 5021, 5027, 5029, 5030, 5043, 5046, 5056, 5068, 5126, 5140, 5205, 5212, 5225, 5226, 5227, 5231, 5236, 5240, 5264, 5281, 5287, 5291, 5296, 5298, 5299, 5302, 5309, 5310, 5314, 5316, 5329, 5341, 5342, 5360, 5362, 5365, 5375, 5376, 5377, 5382, 5385, 5390, 5419, 5429, 5432, 5436, 5441, 5462, 5464, 5474, 5477, 5479, 5487, 5495, 5497, 5500, 5505, 5513, 5523, 5525, 5532, 5533, 5538, 5549, 5557, 5559, 5582, 5588, 5589]\n"
+     ]
+    }
+   ],
    "source": [
     "lasso_coefs = clf_lasso.best_estimator_.coef_\n",
-    "zero_coefs = np.where(lasso_coefs == 0)[1].tolist()"
+    "zero_coefs = np.where(lasso_coefs == 0)[1].tolist()\n",
+    "print(zero_coefs)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
