--- a/8-gradient_boosting/grad_boosting.ipynb
+++ b/8-gradient_boosting/grad_boosting.ipynb
@@ -15,33 +15,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn import datasets, tree, ensemble\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn import tree, ensemble, model_selection, datasets, metrics, linear_model\n",
     "from sklearn.metrics import mean_squared_error\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Populating the interactive namespace from numpy and matplotlib\n"
+     ]
+    }
+   ],
    "source": [
-    "boston = datasets.load_boston()\n",
-    "X, y = boston.data, boston.target\n",
-    "\n",
-    "X_train = X[:int(X.shape[0]*0.75),:]\n",
-    "X_test = X[int(X.shape[0]*0.75):,:]\n",
-    "y_train = y[:int(X.shape[0]*0.75)]\n",
-    "y_test = y[int(X.shape[0]*0.75):]\n",
-    "\n",
-    "def write_answer(answer, file_name):\n",
-    "    with open(file_name, \"w\") as fout:\n",
-    "        fout.write(str(answer))"
+    "%pylab inline\n",
+    "data, target = datasets.load_boston(return_X_y=True)\n",
+    "X_train, X_test, y_train, y_test = model_selection.train_test_split(data, target, test_size=0.25, shuffle=False)"
    ]
   },
   {
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,14 +97,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.455623403859612\n"
+      "5.455623403859614\n"
      ]
     }
    ],
@@ -123,7 +124,6 @@
     "    y_cur = L(gbm_predict(X_train), y_train)\n",
     "    \n",
     "error = np.sqrt(mean_squared_error(y_test, gbm_predict(X_test)))\n",
-    "write_answer(error, 'answer_2.txt')\n",
     "print(error)"
    ]
   },
@@ -142,14 +142,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.812550945781193\n"
+      "4.812550945781194\n"
      ]
     }
    ],
@@ -165,7 +165,6 @@
     "    y_cur = L(gbm_predict(X_train), y_train)\n",
     "\n",
     "error = np.sqrt(mean_squared_error(y_test, gbm_predict(X_test)))\n",
-    "write_answer(error, 'answer_3.txt')\n",
     "print(error)"
    ]
   },
@@ -190,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +202,8 @@
       "[8.60085780173012, 7.203194857681147, 6.404149203632535]\n",
       "[8.838918243844535, 7.509532677987691, 6.754800818647786]\n",
       "[8.984331847800611, 7.401716415501552, 6.723575179689815]\n",
-      "[8.599233632661175, 7.305954162362749, 6.525896308436802]\n"
+      "[8.599233632661175, 7.305954162362749, 6.525896308436802]\n",
+      "Ответ: 2, 3\n"
      ]
     },
     {
@@ -243,7 +243,7 @@
     "    pyplot.legend()\n",
     "    i += 1\n",
     "\n",
-    "write_answer('2 3', 'answer_4.txt')"
+    "print(\"Ответ: 2, 3\")"
    ]
   },
   {
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,6 @@
     "regr = LinearRegression().fit(X_train, y_train)\n",
     "pred = regr.predict(X_test)\n",
     "error = np.sqrt(mean_squared_error(y_test, pred))\n",
-    "write_answer(error, 'answer_5.txt')\n",
     "print(error)"
    ]
   }
